--- a/0x03-React_component/task_0/dashboard/src/App/App.css
+++ b/0x03-React_component/task_0/dashboard/src/App/App.css
@@ -1,37 +1,38 @@
 .App {
-	height: 100vh;
-	max-width: 100vw;
-	--App-border-bottom: 4px solid red;
-	--App-padding: 1.2em;
-	--header-font-size: 1.4rem;
-	--App-font-size: 1.4rem;
-	font-family: "Arial", Helvetica, sans-serif;
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-	font-size: var(--header-font-size);
-	color: red;
-	display: flex;
-	align-items: center;
-	padding: var(--App-padding);
-	border-bottom: var(--App-border-bottom);
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.App-header img {
-	width: 250px;
-	height: 250px;
+.App-link {
+  color: #61dafb;
 }
 
-.App-body {
-	font-size: var(--App-font-size);
-	padding: var(--App-padding);
-	border-bottom: var(--App-border-bottom);
-	height: 45%;
-}
-
-.App-footer {
-	font-size: var(--App-font-size);
-	padding: var(--App-padding);
-	text-align: center;
-	font-style: italic;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
